# BozankayaTask

./: .gitignore  AppMessages.cpp  AppMessages.hpp  Application.cpp  Application.hpp  CMakeLists.txt  CanController.cpp  CanController.hpp  QmlGlobal.cpp  QmlGlobal.hpp  UdpController.cpp  UdpController.hpp  UdpReceiver.cpp  UdpReceiver.hpp  UdpSender.cpp  UdpSender.hpp  XmlController.cpp  XmlController.hpp  main.cpp
doc/: runCan.txt  test.xml
ui/: CMakeLists.txt  CanDialog.qml  DriveShapes.qml  Felifim.qml  ReceiverDialog.qml  SenderDialog.qml  UdpSocketList.qml  main.qml
